dev/test_programs/INVALID/group1/exp7.go
package main

func main(){
	var y int;
	var x float64 = 4.0;
	y = x + 3 +; 
}
